# franka_water_pouring

./: .gitignore  README.md  guide_and_replay.py
arduino/: arduino_bringup.sh
arduino/robot_autonomy_project/: robot_autonomy_project.ino
franka_lab_answers/lab2/: lab2.launch  test_rrt_connect.py
path_planning/: rrt_connect_solutions.py
vrep/: TestMain.py  franka.ttt  franka_kinematics.py  franka_robot.py  utils.py  vrep_interface_franka.py
water_pouring_ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
water_pouring_ros/devel/include/water_executive/: waterEvents.h
water_pouring_ros/devel/share/dragoon_executive/cmake/: dragoon_executive-msg-extras.cmake  dragoon_executive-msg-paths.cmake  dragoon_executiveConfig.cmake
water_pouring_ros/devel/share/roseus/ros/dragoon_executive/: manifest.l
water_pouring_ros/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
water_pouring_ros/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
water_pouring_ros/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
water_pouring_ros/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-extras.cmake  rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
water_pouring_ros/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-extras.cmake  rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
water_pouring_ros/src/water_executive/: CMakeLists.txt  package.xml
water_pouring_ros/src/water_executive/include/: executive.h
water_pouring_ros/src/water_executive/launch/: water_pouring.launch
water_pouring_ros/src/water_executive/msg/: waterEvents.msg
water_pouring_ros/src/water_executive/src/event_manager/: event_manager.py
water_pouring_ros/src/water_executive/src/executive/: arduino.py  executive.cpp  executive.py  joint_positions.txt  rrt.py  rrt_connect_solutions.py  states.py
(+23 files in other folders)
